--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -22,26 +22,26 @@
     </form>
 </div>
 
-<div class="reset-map-zoom">
-    <button id="reset-map-zoom-button" (click)="reset_map_zoom()" title="Reset Zoom">
+<div class="reset-zoom">
+    <button id="reset-map-button" class="user-button" (click)="reset_zoom()" title="Reset Zoom">
         Reset zoom
     </button>
 </div>
 
 <div class="toggle-names">
-    <button id="toggle-name-button" (click)="toggle_names()" title="Toggle names on/off">
+    <button id="toggle-name-button" class="user-button" (click)="toggle_names()" title="Toggle names on/off">
         Names
     </button>
 </div>
 
 <div class="toggle-markers">
-    <button id="toggle-markers-button" (click)="toggle_markers()" title="Toggle markers on/off">
+    <button id="toggle-markers-button" class="user-button" (click)="toggle_markers()" title="Toggle markers on/off">
         Markers
     </button>
 </div>
 
 <div class="give-up">
-    <button mat-raised-button id="give-up-button" (click)="open_give_up_dialog()" title="Give up?">
+    <button mat-raised-button id="give-up-button" class="user-button" (click)="open_give_up_dialog()" title="Give up?">
         Give up?
     </button>
 </div>
