--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -56,7 +56,7 @@
     height: 25px;
 }
 
-/* reset zoom button */
+/* reset zoom div */
 .reset-zoom
 {
     /* for being "above" map component */
@@ -66,8 +66,7 @@
     top: 95px;
     left: 11px;
 }
-
-/* toggle-names button */
+/* toggle-names div */
 .toggle-names
 {
     /* for being "above" map component */
@@ -77,8 +76,7 @@
     top: 130px;
     left: 11px;
 }
-
-/* toggle-markers button */
+/* toggle-markers div */
 .toggle-markers
 {
     /* for being "above" map component */
@@ -88,8 +86,7 @@
     top: 165px;
     left: 11px;
 }
-
-/* give-up button */
+/* give-up div */
 .give-up
 {
     /* for being "above" map component */
@@ -100,6 +97,7 @@
     left: 11px;
 }
 
+
 /* guessed countries stats */
 .stats
 {
@@ -108,6 +106,6 @@
     z-index: 1001;
 
     font-size: 1.25em;
-    top: 20px;
+    top: 25px;
     right: 25px;
 }
