--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -14,8 +14,8 @@
             spellcheck = "true"
             maxlength="64"
             size="25"
-            autofocus
 
+            #entryboxRef
             [(ngModel)] = "curr_country"
             (input)="check_country()"
         />
@@ -23,25 +23,25 @@
 </div>
 
 <div class="reset-zoom">
-    <button id="reset-map-button" class="user-button" (click)="reset_zoom()" title="Reset Zoom">
+    <button #resetzoomRef class="user-button" (click)="reset_zoom()" title="Reset zoom">
         Reset zoom
     </button>
 </div>
 
 <div class="toggle-names">
-    <button id="toggle-name-button" class="user-button" (click)="toggle_names()" title="Toggle names on/off">
+    <button #togglenamesRef class="user-button" (click)="toggle_names()" title="Toggle names on/off">
         Names
     </button>
 </div>
 
 <div class="toggle-markers">
-    <button id="toggle-markers-button" class="user-button" (click)="toggle_markers()" title="Toggle markers on/off">
+    <button #togglemarkersRef class="user-button" (click)="toggle_markers()" title="Toggle markers on/off">
         Markers
     </button>
 </div>
 
 <div class="give-up">
-    <button mat-raised-button id="give-up-button" class="user-button" (click)="open_give_up_dialog()" title="Give up?">
+    <button #giveupRef class="user-button" (click)="open_give_up_dialog()" title="Give up?">
         Give up?
     </button>
 </div>
