added global arial font style and styled country popup colours

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<div class="app">
-    <app-map></app-map>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Countries Quiz</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.png">
+</head>
+
+<body>
+    <div class="app">
+        <app-map></app-map>
+    </div>
+</body>
+
+</html>
