giveup confirmation dialog box

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class="give-up">
-    <button #giveupRef class="user-button" (click)="open_give_up_dialog()" title="Give up?">
+    <button #giveupRef class="user-button" (click)="open_giveup_dialog()" title="Give up?">
         Give up?
     </button>
 </div>
