--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,5 @@ html *
 {
     font-family: Arial, sans-serif;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
