--- a/src/app/giveup-dialog/giveup-dialog.component.html
+++ b/src/app/giveup-dialog/giveup-dialog.component.html
@@ -1,8 +1,7 @@
-<h1 mat-dialog-title>Give Up?</h1>
 
-<div mat-dialog-content>Are you sure you want to give up?</div>
-
-<div mat-dialog-actions>
-    <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-button mat-dialog-close (click)="dialog_giveup()">Give Up</button>
+<div class="giveup_dialog">
+    <h1>Are you sure you want to give up?</h1>
+    
+    <button class="dialog_button cancel_button" mat-dialog-close>Cancel</button>
+    <button class="dialog_button giveup_button" mat-dialog-close (click)="dialog_giveup()">Give Up</button>
 </div>
