--- a/src/styles.css
+++ b/src/styles.css
@@ -23,5 +23,8 @@ html *
 {
     font-family: Arial, sans-serif;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-dialog-container
+{
+    border-radius: 20px !important;
+}
