--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -17,7 +17,7 @@
 
             #entryboxRef
             [(ngModel)] = "curr_country"
-            (input)="check_country()"
+            (input)="input_received()"
         />
     </form>
 </div>
