--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,19 @@
 @import "~leaflet/dist/leaflet.css";
 
+html *
+{
+    font-family: Arial, sans-serif;
+}
+
+.mat-dialog-container
+{
+    border-radius: 20px !important;
+    border: 2px solid #AAAAAA;
+}
+
+
+
+
 /* These leaflet-specific styles need to be in global CSS */
 /* More detail: stackoverflow.com/questions/55133973/     */
 .country-name
@@ -14,20 +28,8 @@
 {
     /* popup text */
     color: #FFFFFF;
+    font-size: 15px;
 
     /* popup box */
     background: #000000;
-}
-
-
-
-html *
-{
-    font-family: Arial, sans-serif;
-}
-
-.mat-dialog-container
-{
-    border-radius: 20px !important;
-    border: 2px solid #AAAAAA;
 }
