--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -38,8 +38,20 @@
     font-size: 1.25em;
 }
 
-/* menu button */
-.menu-button
+/* guessed countries stats */
+.stats
+{
+    /* for being "above" map component */
+    position: absolute;
+    z-index: 1001;
+
+    font-size: 1.75em;
+    top: 25px;
+    right: 25px;
+}
+
+/* button for menu */
+.button-for-menu
 {
     /* for being "above" map component */
     position: absolute;
@@ -58,77 +70,24 @@
 /* menu buttons */
 .button
 {
-    width: 200px;
-    height: 50px;
-}
+    width: 100%;
+    height: 35px;
 
-/* all buttons */
-.user-button
-{
-    text-align: center;
-    font-size: 13px;
+    text-align: left;
+    text-indent: 20px;
+    font-size: 15px;
 
-    background-color: #FFFFFF;
-    border: 1px solid #AAAAAA;
-    color: #000000;
     cursor: pointer;
-
-    padding: 3px;
-    border-radius: 5px;
-    width: 80px;
-    height: 25px;
+    background-color: transparent;
+    border: none;
+    outline: none;
 }
-
-/* reset zoom div */
-.reset-zoom
+.button:hover
 {
-    /* for being "above" map component */
-    position: absolute;
-    z-index: 1001;
-
-    top: 95px;
-    left: 11px;
+    background-color: #EAEAEA;
 }
-/* toggle-names div */
-.toggle-names
+/* menu width */
+::ng-deep.mat-menu-panel
 {
-    /* for being "above" map component */
-    position: absolute;
-    z-index: 1001;
-
-    top: 130px;
-    left: 11px;
-}
-/* toggle-markers div */
-.toggle-markers
-{
-    /* for being "above" map component */
-    position: absolute;
-    z-index: 1001;
-
-    top: 165px;
-    left: 11px;
-}
-/* give-up div */
-.give-up
-{
-    /* for being "above" map component */
-    position: absolute;
-    z-index: 1001;
-
-    top: 200px;
-    left: 11px;
-}
-
-
-/* guessed countries stats */
-.stats
-{
-    /* for being "above" map component */
-    position: absolute;
-    z-index: 1001;
-
-    font-size: 1.75em;
-    top: 25px;
-    right: 25px;
+    max-width: 200px !important;
 }
