--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -20,8 +20,8 @@
 
 .leaflet-container
 {
-    /* background-color: #D3E7FF; */
-    background-color: red;
+    background-color: #D3E7FF;
+    /* background-color: red; */
 }
 
 /* entry box */
